# RobotSound_PT_PAL

./: .gitignore  README.md  settings.gradle.kts  start.sh
app/: build.gradle.kts
app/src/androidTest/java/com/example/joystickcontroller/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/joystickcontroller/: MainActivity.kt
app/src/main/java/com/example/joystickcontroller/bluetooth/: BluetoothManager.kt
app/src/main/java/com/example/joystickcontroller/ui/: GameButton.kt  JoystickView.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/joystickcontroller/: ExampleUnitTest.kt
cpp/: joy_android
cpp/devel/: .catkin  local_setup.sh
cpp/devel/include/joy_andro/: JoyAndro.h
cpp/devel/lib/joy_andro/: joyandro_node_cpp
cpp/devel/lib/pkgconfig/: joy_andro.pc
cpp/devel/lib/python3/dist-packages/joy_andro/msg/: _JoyAndro.py  __init__.py
cpp/devel/share/common-lisp/ros/joy_andro/msg/: JoyAndro.lisp  _package.lisp  _package_JoyAndro.lisp  joy_andro-msg.asd
cpp/devel/share/gennodejs/ros/joy_andro/msg/: JoyAndro.js  _index.js
cpp/devel/share/joy_andro/cmake/: joy_andro-msg-paths.cmake  joy_androConfig.cmake
cpp/devel/share/roseus/ros/joy_andro/: manifest.l
cpp/devel/share/roseus/ros/joy_andro/msg/: JoyAndro.l
cpp/src/joy_andro/: CMakeLists.txt  package.xml
cpp/src/joy_andro/msg/: JoyAndro.msg
cpp/src/joy_andro/src/: joyandro_node.cpp
gradle/wrapper/: gradle-wrapper.properties
src/camera/: CMakeLists.txt  package.xml
src/camera/config/: color_config.yaml
src/camera/launch/: camera.launch.py
src/camera/src/: yolov5.cpp
src/device/: CMakeLists.txt  package.xml
src/device/include/device/: zlac8015d.hpp
src/device/launch/: device.launch.py
src/device/src/: gpio.cpp  joyAndro.cpp  laser.cpp  zlac8015d.cpp
src/robot/: CMakeLists.txt  package.xml
src/robot/launch/: full_system.launch.py  robot.launch.py
src/robot/src/: main.cpp
src/robot_interfaces/: CMakeLists.txt  package.xml
src/robot_interfaces/msg/: JoyAndro.msg
src/tes_joy/: joy_android  joy_android.cpp
src/tes_yolo5/: CMakeLists.txt  yolov5.cpp
